--- a/app/views/runs/_show_3d.html.erb
+++ b/app/views/runs/_show_3d.html.erb
@@ -24,68 +24,16 @@
 	</div>
 
 	<div class="image-table">
-		<table class="table table-hover">
-		  <thead>
-		  	<tr>
-		  		<% if !@threed_volume %><th><input type="checkbox" id="select_all"/></th><% end %>
-			  	<th>ID</th>
-			  	<th>Image Name</th>
-			  	<th>Generated At</th>
-			  	<th>Status</th>
-			  	<th>Privacy</th>
-		  	</tr>
-		  </thead>
-  	  <% if !@threed_volume %>
-  	  	<%= form_tag confirm_3d_images_path do %>
-	  	  	<%= submit_tag "Convert to 3D Volume", :style=> 'float:right', :class=> 'btn btn-success btn-raised'%>
-	  	  	<tbody>
-				  		<% @slices.each do |image| %>
-					  		<tr class="image-link">
-					  			<td><%= check_box_tag "image_ids[]", image.id, false, class: 'image-check-box' %></td>
-					  			<td><%=image.id%></td>
-					  			<td>
-					  				<% if !image.path.blank?%>
-		  								<a href="<%=image_path(image)%>"><%=image.title%></a>
-				  					<% else%>
-				  						<%=image.title%>
-				  					<% end %>
-					  			</td>
-					  			<td><%=image.created_at%></td>
-					  			<td><% if image.processing %>Processing<% elsif !image.path.blank?%>Available<%else%>Awaiting Processing<% end%></td>
-					  			<td><% if image.hidden? %>Private<%else%>Public<%end%></td>
-					  		</tr>
-				  		<% end %>
-					</tbody>
-				<% end %>
-  	  <% else%>
-  	  	<a href="<%=image_url(@threed_volume.id)%>">
-  	  	<button style="float:right" class="btn btn-success btn-raised">View 3D Volume</button></a>
-				<tbody>
-			  		<% @slices.each do |image| %>
-				  		<tr class="image-link">
-				  			<td><%=image.id%></td>
-								<td>
-									<% if !image.path.blank?%>
-		  							<a href="<%=image_path(image)%>"><%=image.title%></a>
-				  				<% else%>
-				  					<%=image.title%>
-				  				<% end %>
-					  		</td>				  			
-					  		<td><%=image.created_at%></td>
-				  			<td><% if image.processing %>
-				  					Processing
-				  				<% elsif !image.path.blank?%>
-				  					Available
-				  				<%else%>
-				  					Awaiting Processing
-				  				<% end%>	
-				  			</td>
-				  			<td><% if image.hidden? %>Private<%else%>Public<%end%></td>
-				  		</tr>
-			  		<% end %>
-				</tbody>
+	 	<% if !@threed_volume %>
+  	  		<%= form_tag confirm_3d_images_path do %>
+	  	  		<%= submit_tag "Convert to 3D Volume", :style=> 'float:right', :class=> 'btn btn-success btn-raised'%>
+				<%= render :partial => 'images/confirm_table.html.erb', :locals => { :images=>@images}%>
 			<% end %>
-		</table>
+		<% else %>
+			<a href="<%=image_url(@threed_volume.id)%>">
+  	  		<button style="float:right" class="btn btn-success btn-raised">View 3D Volume</button></a>
+  	  		<%= render :partial => 'images/confirm_table.html.erb', :locals => { :images=>@images}%>
+  	  	<% end %>
 	</div>
 </div>
 
