--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -155,7 +155,7 @@
 			var is_drawing_mode = $('.drawer-annotations').hasClass('active');
 
 			$.get( "<%=@image.id%>/get_slice?slice="+slice_num.toString(), function( data ) {
-				viewer.open("/<%=Rails.application.config.data_directory%>/" + data.file_name_prefix + "/" + data.file_name_prefix + ".dzi");
+				viewer.open(data);
 				viewer.viewport.fitBounds(current_bounds);
 				stopDrawing();
 				viewer.shutdownAnnotations();
