--- a/app/views/images/_drawer_annotations.html.erb
+++ b/app/views/images/_drawer_annotations.html.erb
@@ -36,7 +36,8 @@
 
   <header>
     <span style="white-space:pre-wrap;" class="navbar-brand">Load Existing Annotations</span>
-    <span>Click to visualize a previously drawn annotation</span>
+    <span>Click to visualize a previously drawn annotation</span><br/>
+    <%=link_to download_annotations_image_path(@image.id) do%><span>Download Annotations in JSON</span><% end %>
   </header>
   <table class="annotations-table table table-hover">
     <thead>
