--- a/app/views/images/_drawer_home.html.erb
+++ b/app/views/images/_drawer_home.html.erb
@@ -8,9 +8,15 @@
   <a data-tab="drawer-data" class="list-group-item drawer-link">
     <i class="material-icons" role="presentation">inbox</i>Clinical Data
   </a>
-  <a data-tab="drawer-home" class="list-group-item drawer-link" href="#" data-toggle="modal" data-target="#run-modal">
+  <a data-tab="drawer-home" class="list-group-item drawer-link" data-toggle="modal" data-target="#run-modal">
     <i class="material-icons" role="presentation">code</i>Run Analysis
   </a>
+  <% if image.threed? %>
+  <a href="<%=show_3d_image_path(image) %>" class="list-group-item drawer-link">
+    <i class="material-icons" role="presentation">visibility</i>View in 3D
+  </a>
+  <% end %>
+
   <li class="bmd-layout-spacer"></li>
 
   <a class="list-group-item">
