--- a/app/views/images/_drawer_home.html.erb
+++ b/app/views/images/_drawer_home.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <span style="white-space:pre-wrap;" class="navbar-brand"><%=image.title%></span>
+  <span style="white-space:pre-wrap; overflow-wrap: break-word;" class="navbar-brand"><%=image.title%></span>
 </header>
 <ul class="list-group">
   <a data-tab="drawer-annotations" class="list-group-item drawer-link">
