--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -103,7 +103,7 @@
 <div class="container">
 	<br/><br/>
 	<h1>Upload Images</h1>
-	<h4>Only SVS and NDPI file formats supported at this time</h4>
+	<h4>NDPI, SVS, JPG, TIF, PNG File Formats Supported</h4>
 	<br/><br/>
 	<form action="#" method="GET" class="form image_form">
 		<div class="upload" data-upload-options='{"action":"/images"}'></div>
