Minor bug fixes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,7 @@
             <div class="dropdown-menu" aria-labelledby="account-dropdown">
               <a class="dropdown-item" href="<%=runs_path%>">My Analyses</a>
               <a class="dropdown-item" href="<%=my_images_images_path%>">My Images</a>
+              <a class="dropdown-item" href="<%=edit_user_registration_path%>">Settings</a>
             </div>
           </li>
         <% end %>
