--- a/app/views/runs/_show_2d.html.erb
+++ b/app/views/runs/_show_2d.html.erb
@@ -4,24 +4,40 @@
 		  <a href="/runs"><i style="vertical-align:bottom;" class="material-icons" role="presentation">arrow_back</i>
 		  <span>Back to All Analyses</span></a>
 		</span>
-		<header>
-  			<span style="white-space:pre-wrap;" class="navbar-brand">Analysis Results</span>
-  			<%=link_to download_results_run_path(@run.id) do%><span>Download Raw Output</span><% end %>
-		</header>
 		
 		<div style="padding:10px">
-			<p>Analysis ID:<br/><b><%=@run.id%></b></p>
-			<p>Status:<br/><b><%=@run.status_words%></b></p>
-			<p>Image Title:<br/><b><%=@image.title%></b></p>
-			<p>Algorithm Ran:<br/><b><%=@algorithm.title%> (ID: <%=@algorithm.id%>)</b></p>
+			<header>
+  				<span style="white-space:pre-wrap;" class="navbar-brand">Analysis #<%=@run.id%></span>
+			</header>
+			<p>Status:<br/><%=@run.status_words%></p>
+			<p>Image Title:<br/><%=@image.title%></p>
+			<p>Algorithm Ran:<br/><%=@algorithm.title%> (ID: <%=@algorithm.id%>)</p>
 			<% if @run.run_at %>
-				<p>Started:<br/><b><%=Time.at(@run.run_at).in_time_zone.to_formatted_s(:db) %></b></p>
+				<p>Started:<br/><%=Time.at(@run.run_at).in_time_zone.to_formatted_s(:db) %></p>
 			<% end %>
 			<%if @run.complete %>
-				<p>Completed:<br/><b><%=@run.updated_at.in_time_zone.to_formatted_s(:db) %> (Took <%=distance_of_time_in_words(Time.at(@run.run_at), @run.updated_at)%>)</b></p>
+				<p>Completed:<br/><%=@run.updated_at.in_time_zone.to_formatted_s(:db) %> (Took <%=distance_of_time_in_words(Time.at(@run.run_at), @run.updated_at)%>)</p>
 			<% end %>
-			<p>Result Count:<br/><b><%=@run.results.count%></b></p>
-			<p>Algorithm Parameters:</p>
+
+			<header>
+  				<span style="white-space:pre-wrap;" class="navbar-brand">Results</span>
+			</header>
+			<% if @algorithm.multioutput %>
+				<% @algorithm.multioutput_options.each do |option| %>
+					<% if [Algorithm::OUTPUT_TYPE_LOOKUP["points"], Algorithm::OUTPUT_TYPE_LOOKUP["contour"]].include?(option["output_type"])%>
+						<a href="#" class="retrieve-results" key="<%=option["output_key"]%>">
+							<p>Display <%=option["output_key"].gsub('_', ' ').titleize.pluralize%></p>
+						</a>
+					<%end %>
+				<% end %>
+				<% @numerical_result_hash.keys.each do |key|%>
+					<p><%=key.to_s.gsub('_', ' ').titleize%>: <%=@numerical_result_hash[key.to_sym]%></p>
+				<%end%>
+			<% end %>
+			<%=link_to download_results_run_path(@run.id) do%><span>Download All Results</span><% end %>
+			<header>
+  				<span style="white-space:pre-wrap;" class="navbar-brand">Parameters</span>
+			</header>
 		</div>
 		<ul>
 		<% i = 0 %>
@@ -43,9 +59,7 @@
 </div>
 
 <script>
-
-	var results_data = JSON.parse('<%= raw(@results_data.to_json) %>');
-	var results_svg = [];
+ 	var results_data = JSON.parse('<%= raw(@results_data.to_json) %>');
 	var annotation = '<%=raw(@annotation.data.to_json) %>';
 	var viewer = OpenSeadragon({
 		preserveViewport: true,
@@ -54,33 +68,12 @@
 	    tileSources:   "/<%=@image.dzi_url%>"
 	});
 	var exclude_indices = [];
-
-	_.each(results_data, function(element, index){
-		if(element[0][0] == "circle"){
-			element[0][1]["index"] = index;
-			element[0][1]["r"] = 0.02;
-			element[0][1]["data-id"] = element[1];
-			element[0][1]["fill"] = "lime"
-			element[0][1]["fill-opacity"] = 0.1;
-			element[0][1]["stroke"] = "lime";
-			element[0][1]["stroke-width"] = 1.5;
-			if(element[2] === true){
-				element[0][1]["fill"] = "red";
-				element[0][1]["stroke"] = "red";
-				element[0][1]["exclude"] = true;
-			}
-		}
-		results_svg.push(element[0]);
-	});
-
-	var annotation_data = JSON.parse(annotation)[0];
-	results_svg.push(annotation_data);
 	viewer.initializeAnnotations();
 	waitForAnnotationInitialize();
 
 	function waitForAnnotationInitialize(){
     if(viewer.areAnnotationsActive()){
-        viewer.annotations.set(results_svg);
+        viewer.annotations.set(generateSVGs(results_data, annotation));
 
         $('.openseadragon-container').click(function(e){
 	    	if($(e.target).is('circle')){
@@ -92,6 +85,31 @@
     else{
         setTimeout(waitForAnnotationInitialize, 250);
     }
+
+    function generateSVGs(results_data, annotation){
+		var svgs = [];
+		_.each(results_data, function(element, index){
+			if(element[0][0] == "circle"){
+				element[0][1]["index"] = index;
+				element[0][1]["r"] = 0.02;
+				element[0][1]["data-id"] = element[1];
+				element[0][1]["fill"] = "lime"
+				element[0][1]["fill-opacity"] = 0.1;
+				element[0][1]["stroke"] = "lime";
+				element[0][1]["stroke-width"] = 1.5;
+				if(element[2] === true){
+					element[0][1]["fill"] = "red";
+					element[0][1]["stroke"] = "red";
+					element[0][1]["exclude"] = true;
+				}
+			}
+			svgs.push(element[0]);
+		});
+
+		var annotation_data = JSON.parse(annotation)[0];
+		svgs.push(annotation_data);
+		return svgs;
+	}
 
     function excludeResult(index){
 	   	var current_annotations = viewer.annotations.get();
@@ -119,6 +137,21 @@
 	  		});
 		}
     }
+
+    function retrieveAndSetResults(key){
+		$.ajax({
+			method: "GET",
+			url: "/runs/<%=@run.id%>/get_results.json?key=" + key
+		})
+		.done(function(results_data){
+			viewer.annotations.clean();
+			viewer.annotations.set(generateSVGs(results_data, annotation));
+		})
+    }
+
+	$('.retrieve-results').off('click').click(function(){
+		retrieveAndSetResults($(this).attr('key'));
+	});
 }
 
 
