--- a/app/views/runs/_show_2d.html.erb
+++ b/app/views/runs/_show_2d.html.erb
@@ -65,6 +65,11 @@
 			</div>
 		</div>
 	</div>
+	<div style="position: fixed; bottom: 0; width: 150; right: 0; z-index: 100; color:white; background: rgba(0,0,0,.5); padding: 5px; text-align: center;" class="position-box">
+		x: <span id="position-text-x"></span><br/>
+		y: <span id="position-text-y"></span>
+
+	</div>
 </div>
 
 <script>
@@ -81,9 +86,26 @@
 	    maxZoomPixelRatio: 5.0
 	});
 	var exclude_indices = [];
+	var mouse_tracker = new OpenSeadragon.MouseTracker({
+		element: viewer.element,
+		moveHandler: trackPointer
+	});
+
+	function trackPointer(event){
+		var imagePoint = viewer.viewport.viewerElementToImageCoordinates(event.position);
+		if(imagePoint.x >=0 && imagePoint.x <= <%=@image.width%> && imagePoint.y >=0 && imagePoint.y <= <%=@image.height%>){
+			$('#position-text-x').html(String(imagePoint.x.toFixed(2)));
+			$('#position-text-y').html(String(imagePoint.y.toFixed(2)));
+		}else{
+			$('#position-text-x').html("");
+			$('#position-text-y').html("");
+		}
+	}
+
 	viewer.initializeAnnotations();
 	waitForAnnotationInitialize();
 	viewer.addHandler('animation-finish', function(e){retrieveAndSetResults(e);});
+
 
 	function waitForAnnotationInitialize(){
 	    if(viewer.areAnnotationsActive()){
