Permit decimals in parameters

--- a/app/views/algorithms/_parameter_form.html.erb
+++ b/app/views/algorithms/_parameter_form.html.erb
@@ -3,9 +3,10 @@
  		<% if !parameter["hard_coded"] && !parameter["annotation_derived"] %>
  		<div class="form-group">
  			<%= parameter_fields.label parameter["key"].to_sym, parameter["title"] %>
- 			<% if [Algorithm::PARAMETER_TYPE_LOOKUP["integer"], Algorithm::PARAMETER_TYPE_LOOKUP["float"]].include? parameter["type"] %>
-				<%= parameter_fields.number_field parameter["key"].to_sym, { value: parameter["default_value"], 
-					class: 'form-control', :required => parameter["required"]} %>
+ 			<% if parameter["type"] == Algorithm::PARAMETER_TYPE_LOOKUP["integer"] %> 
+				<%= parameter_fields.number_field parameter["key"].to_sym, { value: parameter["default_value"], class: 'form-control', :required => parameter["required"]} %>
+			<% elsif parameter["type"] == Algorithm::PARAMETER_TYPE_LOOKUP["float"] %>
+				<%= parameter_fields.number_field parameter["key"].to_sym, { step: 0.01, value: parameter["default_value"], class: 'form-control', :required => parameter["required"]} %>
 			<% elsif parameter["type"] == Algorithm::PARAMETER_TYPE_LOOKUP["boolean"] %>
 				<%= parameter_fields.check_box parameter["key"].to_sym, :required => parameter["required"]%>
 			<% elsif parameter["type"] == Algorithm::PARAMETER_TYPE_LOOKUP["color"] %>
