--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -29,13 +29,17 @@
 	}
 	function onBeforeSend(formData, file) {
 		console.log("Before Send");
-		var file_name_lower = file.name.toLowerCase();
-		   if (file_name_lower.indexOf(".svs") < 0 && file_name_lower.indexOf(".ndpi") < 0 && file_name_lower.indexOf(".jpg") < 0 && file_name_lower.indexOf(".jpeg") < 0 && file_name_lower.indexOf(".tif") < 0 && file_name_lower.indexOf(".png") < 0) {
+		var file_name_lower = file.name.split('.').pop().toLowerCase();
+		var accepted_extensions = ['.svs', '.ndpi', '.jpg', '.jpeg', '.tif', '.png', '.tiff', '.dcm']
+
+		if (!(accepted_extensions.includes(file_name_lower) || !isNaN(parseInt(file_name_lower)) )) {
        		alert("Your file type is not supported. NDPI, SVS, JPG, TIF, PNG are supported at this time");
-       		 return false;
+       		return false;
     	}
+
 		return formData;
 	}
+
 	function onQueued(e, files) {
 		console.log("Queued");
 		var html = '';
