--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -33,7 +33,7 @@
 		var accepted_extensions = ['.svs', '.ndpi', '.jpg', '.jpeg', '.tif', '.png', '.tiff', '.dcm']
 
 		if (!(accepted_extensions.includes(file_name_lower) || !isNaN(parseInt(file_name_lower)) )) {
-       		alert("Your file type is not supported. NDPI, SVS, JPG, TIF, PNG are supported at this time");
+       		alert("Your file type is not supported. NDPI, SVS, JPG, TIF, PNG, DCM are supported at this time");
        		return false;
     	}
 
@@ -107,7 +107,7 @@
 <div class="container">
 	<br/><br/>
 	<h1>Upload Images</h1>
-	<h4>NDPI, SVS, JPG, TIF, PNG File Formats Supported</h4>
+	<h4>NDPI, SVS, JPG, TIF, PNG, DICOM File Formats Supported</h4>
 	<br/><br/>
 	<form action="#" method="GET" class="form image_form">
 		<div class="upload" data-upload-options='{"action":"/images"}'></div>
