--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,9 @@
               <a class="dropdown-item" href="<%=runs_path%>">My Analyses</a>
               <a class="dropdown-item" href="<%=my_images_images_path%>">My Images</a>
               <a class="dropdown-item" href="<%=edit_user_registration_path%>">Settings</a>
+              <% if current_user.admin? %>
+                <a class="dropdown-item" href="/admin">Admin Panel</a>
+              <% end %>
             </div>
           </li>
         <% end %>
@@ -79,25 +82,24 @@
     </div>
   </nav>
 
-  <% if notice.present? %>
-    <div class="alert alert-info" id="application-alert">
-      <%= raw(notice) %>
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-  <% end %>
-
-  <% if flash[:alert].present? %>
-    <div class="alert alert-danger" id="application-alert">
-      <%= raw(flash[:alert]) %>
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-  <% end %>
-
   <div class="full-width-container">
+    <% if notice.present? %>
+      <div class="alert alert-info" id="application-alert">
+        <%= raw(notice) %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    <% end %>
+
+    <% if flash[:alert].present? %>
+      <div class="alert alert-danger" id="application-alert">
+        <%= raw(flash[:alert]) %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    <% end %>
     <%= yield %>
   </div>
 </div>
