--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
             <a class="nav-link dropdown-toggle"  style="line-height:15px;" id="account-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
             <div class="dropdown-menu" aria-labelledby="account-dropdown">
               <a class="dropdown-item" href="<%=runs_path%>">My Analyses</a>
-              <a class="dropdown-item" href="<%=my_images_images_path%>">My Images</a>
+              <a class="dropdown-item" href="<%=my_projects_path%>">My Projects</a>
               <a class="dropdown-item" href="<%=edit_user_registration_path%>">Settings</a>
               <% if current_user.admin? %>
                 <a class="dropdown-item" href="/admin">Admin Panel</a>
