--- a/app/views/runs/confirm_delete.html.erb
+++ b/app/views/runs/confirm_delete.html.erb
@@ -26,7 +26,7 @@
 				<tbody>
 					<% if @runs %>
 				  	<% @runs.each do |run| %>
-						<tr class="image-link <% if run.complete %>table-success<%elsif run.processing%>table-info<%else%>table-warning<%end%>" data-link="<%=run_path(run)%>">
+						<tr class="click-link <% if run.complete %>table-success<%elsif run.processing%>table-info<%else%>table-warning<%end%>" data-link="<%=run_path(run)%>">
 				  			<td><%= check_box_tag "run_ids[]", run.id, :default=>true%></td>
 				  			<td class="d-none d-md-table-cell"><%=run.id%></td>
 				  			<td class="image-name"><%=run.image.title%></td>
