--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -22,7 +22,7 @@
 		</thead>
 		<tbody>
 			<% @images.each do |image| %>
-				<tr class="image-link">
+				<tr class="click-link">
 					<td class="d-none d-md-table-cell"><%=image.id%></td>
 					<td>
 						<% if image.complete %>
