--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -110,7 +110,7 @@
 	<h4>NDPI, SVS, JPG, TIF, PNG, DICOM File Formats Supported</h4>
 	<br/><br/>
 	<form action="#" method="GET" class="form image_form">
-		<div class="upload" data-upload-options='{"action":"/images"}'></div>
+		<div class="upload" data-upload-options='{"action":"/images?project_id=<%=@project.id%>"}'></div>
 		<div class="filelists">
 			<h5>Complete</h5>
 			<ol class="filelist complete">
