--- a/app/views/users/_images_panel.html.erb
+++ b/app/views/users/_images_panel.html.erb
@@ -17,11 +17,9 @@
     <%= form_tag confirm_3d_images_path do %>
       <%= submit_tag "Delete", :style=>"float:right; margin-left:10px;", :class=>"btn-raised btn btn-danger", :formaction=> confirm_delete_images_path %>
       <%= submit_tag "Combine in 3D Volume", :style=> 'float:right; margin-left:10px;', :class=> 'btn btn-success btn-raised'%>
-      <%= submit_tag "Make Public", :style=>"float:right; margin-left:10px;", :class=>"btn-raised btn btn-primary", :formaction=> make_public_images_path %>
-      <%= submit_tag "Share", :style=>"float:right; margin-left:10px;", :class=>"btn-raised btn btn-primary", :formaction=>  confirm_share_user_image_ownerships_path %>
       <tbody>
         <% @images.each do |image| %>
-          <tr class="image-link">
+          <tr class="click-link">
             <td><%= check_box_tag "image_ids[]", image.id, false, class: 'image-check-box'%></td>
             <td class="d-none d-md-table-cell"><%=image.id%></td>
             <td>
